cmake_minimum_required(VERSION 3.21)
project(MemoryManagement)

set(CMAKE_CXX_STANDARD 14)

add_executable(MemoryManagement
        #cache.cpp
        #time.cpp
        #stackusage.cpp
        #malloc.cpp
        #new.cpp
        #new_overloading.cpp
        #size_t.cpp
        #example.cpp
        leaks.cpp)
